Adjusted animation position and added more falling icons

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ h1 {
   font-size: 5em;
   height: auto;
   position: absolute;
-  top: -10%;
+  top: -20%;
   z-index: 9999;
   animation-name: animation-fall, animation-shake;
   animation-duration: 3s, 2s;
@@ -169,8 +169,28 @@ h1 {
   left: 55%; animation-delay: 1s, 0.5s;
 }
 
+.snowflake:nth-of-type(11),
+.flame:nth-of-type(13) {
+  left: 30%; animation-delay: 0.5s, 0s;
+}
+
+.snowflake:nth-of-type(12),
+.flame:nth-of-type(11) {
+  left: 25%; animation-delay: 0.25s, 0.25s;
+}
+
+.snowflake:nth-of-type(13),
+.flame:nth-of-type(14) {
+  left: 45%; animation-delay: 0.7s, 0.6s;
+}
+
+.snowflake:nth-of-type(14),
+.flame:nth-of-type(12) {
+  left: 70%; animation-delay: 0.5s, 0.3s;
+}
+
 .snowflake:nth-of-type(10) {
-  left: 20%; animation-delay: .85s, 0.1s;
+  left: 80%; animation-delay: 0.85s, 0.1s;
 }
 
 .flame:nth-of-type(9) {
