--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 25%;
+  color: dimgrey
 }
 
 .icon {
@@ -48,6 +49,7 @@ h1 {
   justify-content: center;
   height: auto;
   font-size: 2em;
+  color: dimgrey
 }
 
 .game-container {
@@ -76,6 +78,47 @@ h1 {
 
 .disabled {
   cursor: not-allowed;
+}
+
+button {
+  position: relative;
+  height: 40px;
+  width: 175px;
+  margin: 15px 0px;
+  color: dimgrey;
+  border: 2px solid dimgrey;
+  border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 2px;
+  transition: all .35s;
+  cursor: pointer;
+}
+
+button span{
+  position: relative;
+  z-index: 2;
+}
+
+button:after{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  background: dimgrey;
+  transition: all .35s;
+}
+
+button:hover{
+  color: white;
+}
+
+button:hover:after{
+  width: 100%;
 }
 
 /* WIN ANIMATIONS */
